--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+h1{
+  text-shadow: 7px 5px 5px #066f8a;
+}
+
+
 body {
   font-family: Arial, sans-serif;
   background-color: #58e6eb;
@@ -29,6 +34,15 @@ button {
   padding: 10px 20px;
   font-size: 16px;
   background-color: #066f8a;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+}
+button:hover{
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #054c5e;
   color: #ffffff;
   border: none;
   cursor: pointer;
